test/tasty/neg/src-3/HelloWorld.scala
package helloworld

object HelloWorld {
  inline val msg: String = "Hello, World!"
}
